Some more work on parsing 64-bit integers

--- a/OS/src/OSParsers/OSParseosil.y.1
+++ b/OS/src/OSParsers/OSParseosil.y.1
@@ -210,10 +210,9 @@ this fails on in Mac OS X
 */
 
 %union {
-    double dval;
-    int ival;
-    char* sval;
-    
+    double   dval;
+    OsXmlInt ival;
+    char*    sval;
 }
 %{
 int osillex(YYSTYPE* lvalp,  YYLTYPE* llocp, void* scanner );
