--- a/OS/src/OSParsers/OSParseosil.y.2
+++ b/OS/src/OSParsers/OSParseosil.y.2
@@ -1710,7 +1710,7 @@ osilStageobjstartidxATT: STARTIDXATT QUOTE INTEGER QUOTE
     if (*$2 != *$4) 
         parserData->parser_errors += addErrorMsg( NULL, osinstance, parserData, osglData, osnlData, "mismatched quotes");
     if (parserData->stageObjectivesOrdered == true) parserData->parser_errors += addErrorMsg( NULL, osinstance, parserData, osglData, osnlData, "duplicate attribute");
-    if ($3 >= 0 && $3 <= -osinstance->instanceData->objectives->numberOfObjectives - 1)
+    if ($3 >= 0 || $3 <= -osinstance->instanceData->objectives->numberOfObjectives - 1)
         parserData->parser_errors += addErrorMsg( NULL, osinstance, parserData, osglData, osnlData, "objective index out of range");
     parserData->stageObjectivesOrdered = true;
     parserData->stageObjectiveStartIdx = $3;
