--- a/OS/src/OSParsers/OSParseosrl.y.1
+++ b/OS/src/OSParsers/OSParseosrl.y.1
@@ -84,9 +84,9 @@ void osnl_empty_vectors( OSnLParserData* osnlData);
 
 
 %union {
-    double dval;
-    int ival;
-    char* sval;
+    double   dval;
+    OsXmlInt ival;
+    char*    sval;
 }
 
 /* %name-prefix="osrl" 
