Improved OSCsdpSolver::setsolverOptions()

--- a/OS/src/OSParsers/OSParseosol.l.1
+++ b/OS/src/OSParsers/OSParseosol.l.1
@@ -20,7 +20,7 @@
  * to place temporary data into the correct parser data object.
  */
 %{
-#define OSOLPARSERDEBUG
+//#define OSOLPARSERDEBUG
 
 #ifdef OSOLPARSERDEBUG
 	#define YY_PRINT  printf("%s", yytext)
