Some old (Nov 2017) changes to the documentation that somehow were never committed

--- a/OS/doc/osDevelopersBible.tex
+++ b/OS/doc/osDevelopersBible.tex
@@ -227,6 +227,12 @@ more information.
 % Part 4: end items: future plans, bibliography, etc.
 \throwpage
 
+\pagenumbering{gobble}
+
+\part{Developing the project}
+
+\pagenumbering{bychapter}
+
 \input{chapters/OSReleaseProcedures.tex}
 
 \throwpage
